# goit_web_hw02

./: Dockerfile  bot_env.py
bot_env/: pyproject.toml
