[project]
name = "bot-env"
version = "0.1.0"
description = "Contacs assistant"
authors = [
    {name = "zadididon",email = "zadididon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "bot_env", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.12"

